k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcart-product-search-service
  namespace: mcart
spec:
  selector:
    app: mcart-product-search-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
